--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptochain",
   "version": "1.0.0",
-  "description": "",
+  "description": "![Course Logo](course_logo_udemy.png)",
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
